--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,40 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.0.0)
 project(vrep_ros_interface)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
 
-find_package(catkin REQUIRED COMPONENTS
-  roscpp rosmsg image_transport tf cv_bridge
-)
+set(PKG_DEPS
+    roscpp
+    rosconsole
+    cv_bridge
+    image_transport
+    tf
+    brics_actuator
+    roslib
+    brics_actuator
+    actionlib_msgs
+    control_msgs
+    diagnostic_msgs
+    geometry_msgs
+    map_msgs
+    nav_msgs
+    pcl_msgs
+    sensor_msgs
+    shape_msgs
+    std_msgs
+    tf2_geometry_msgs
+    tf2_msgs
+    tf2_sensor_msgs
+    trajectory_msgs
+    visualization_msgs)
+
+find_package(catkin REQUIRED COMPONENTS ${PKG_DEPS})
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules/")
 find_package(VREP REQUIRED)
 
-catkin_package(
-    CATKIN_DEPENDS roscpp rosconsole cv_bridge image_transport tf brics_actuator roslib actionlib_msgs control_msgs diagnostic_msgs geometry_msgs map_msgs nav_msgs pcl_msgs sensor_msgs shape_msgs std_msgs tf2_geometry_msgs tf2_msgs tf2_sensor_msgs trajectory_msgs visualization_msgs
-)
+catkin_package(CATKIN_DEPENDS ${PKG_DEPS})
 
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/generated)
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc)
@@ -24,14 +45,6 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR}/generated)
 include_directories(${catkin_INCLUDE_DIRS})
 include_directories(${VREP_INCLUDE})
 include_directories(${VREP_COMMON})
-
-link_directories("/opt/ros/fuerte/lib")
-link_directories("/opt/ros/groovy/lib")
-link_directories("/opt/ros/hydro/lib")
-link_directories("/opt/ros/indigo/lib")
-link_directories("/opt/ros/jade/lib")
-link_directories("/opt/ros/kinetic/lib")
-link_directories("/opt/ros/melodic/lib")
 
 set(generatedFiles)
 file(GLOB templateFiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/templates/ ${CMAKE_CURRENT_SOURCE_DIR}/templates/*)
@@ -52,19 +65,15 @@ set(SOURCES
     ${CMAKE_CURRENT_BINARY_DIR}/generated/ros_srv_io.cpp
 )
 add_library(v_repExtRosInterface ${SOURCES})
-add_dependencies(v_repExtRosInterface ${catkin_EXPORTED_TARGETS} generate_ros_code)
+add_dependencies(v_repExtRosInterface generate_ros_code)
 target_link_libraries(v_repExtRosInterface
-    pthread
-    dl
-    roslib
-    rosconsole
-    rostime
-    rospack
-    roscpp_serialization
-    roscpp
-    tf
-    image_transport
-    boost_system
     ${catkin_LIBRARIES}
-    ${VREP_LIBRARIES}
-)
+    ${VREP_LIBRARIES})
+
+## This will produce the library directly in vrep root folder. The default folder
+## for the libv_repExtRosInterface.so file will not be devel/lib anymore.
+#set_target_properties(v_repExtRosInterface PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${VREP_ROOT})
+
+## install the library to VREP_ROOT folder
+## this command will install the generated library to the vrep root folder no matter where the library is generated.
+#install(TARGETS v_repExtRosInterface DESTINATION ${VREP_ROOT})
