add cmake submod

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,10 @@ set(PKG_DEPS
 
 find_package(catkin REQUIRED COMPONENTS ${PKG_DEPS})
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules/")
+set(CMAKE_MODULE_PATH
+    ${CMAKE_MODULE_PATH}
+    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules
+    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/CoppeliaRobotics-modules)
 find_package(VREP 3.5.0 REQUIRED)
 
 catkin_package(CATKIN_DEPENDS ${PKG_DEPS})
